--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # Menu navigation links
 
 - title: Portfolio
-  url: http://decryptmylife.xyz/portfolio.html
+  url:  http://www.jajb.us.s3-website-us-east-1.amazonaws.com/portfolio.html
 
 - title: Interests
-  url: http://decryptmylife.xyz/interests.html
+  url:  http://www.jajb.us.s3-website-us-east-1.amazonaws.com/interests.html
 
 - title: Pictures
-  url: http://decryptmylife.xyz/photo-gallery.html
-  
+  url:  http://www.jajb.us.s3-website-us-east-1.amazonaws.com/photo-gallery.html
+
 - title: Random(ness)
-  url: http://decryptmylife.xyz/randomness.html
+  url:  http://www.jajb.us.s3-website-us-east-1.amazonaws.com/randomness.html
