--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # Menu navigation links
 
 - title: Portfolio
-  url:  http://www.jajb.us.s3-website-us-east-1.amazonaws.com/portfolio.html
+  url:  https://jasoncwilley.github.io/jajb/portfolio.html
 
 - title: Interests
-  url:  http://www.jajb.us.s3-website-us-east-1.amazonaws.com/interests.html
+  url:  https://jasoncwilley.github.io/jajb/interests.html
 
 - title: Pictures
-  url:  http://www.jajb.us.s3-website-us-east-1.amazonaws.com/photo-gallery.html
+  url:  https://jasoncwilley.github.io/jajb/photo-gallery.html
 
 - title: Random(ness)
-  url:  http://www.jajb.us.s3-website-us-east-1.amazonaws.com/randomness.html
+  url: https://jasoncwilley.github.io/jajb/randomness.html
