--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ words_per_minute: 200
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
 # When testing locally leave blank or use http://localhost:4000
 #url: http://www.jajb.us.s3-website-us-east-1.amazonaws.com/
-url:  https://jasoncwilley.github.io/jajb/
+url:  https://jasoncwilley.github.io/jajb
 #baseurl:
-
+ #site.url: https://jasoncwilley.github.io/jajb
 
 # Owner/author information
 
